Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,73 +1,85 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640" />
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
 
-  <title>Wammiltich.github.io</title>
-  <meta name="description" content="">
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Wammiltich.github.io by wammiltich</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
+    <a id="forkme_banner" href="https://github.com/wammiltich">View on GitHub</a>
+    <div class="shell">
 
-</head>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Wammiltich.github.io</h1>
+            <h2></h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-
-<body>
-  <div class="wrapper">
-    <header>
-      <h1 class="title">William's Site</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/wammiltich" class="code">View Wammiltich.github.io on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+      <div id="no-downloads">
+        <span class="inner">
+        </span>
+      </div>
 
 
+      <span class="banner-fix"></span>
 
 
-<p>People assume that time is a strict progression of cause to effect, but *actually* from a non-linear, non-subjective viewpoint - it's more like a big ball of wibbly wobbly... time-y wimey... stuff.</p>
+      <section id="main_content">
+        <p>People assume that time is a strict progression of cause to effect, but *actually* from a non-linear, non-subjective viewpoint - it's more like a big ball of wibbly wobbly... time-y wimey... stuff.</p>
+
 <p> - The Doctor </p>
 
 <p>I really dont know what to do with this site</p>
 
-<iframe width="420" height="315" src="//www.youtube.com/embed/R0AqE9dapV0" frameborder="0" allowfullscreen></iframe>
 
-<STYLE>#qp_main57243 .qp_btna:hover input {background: rgb(255,215,169)!important;background: -moz-linear-gradient(top,  rgba(255,215,169,1) 0%, rgba(255,209,157,1) 50%, rgba(255,200,137,1) 51%, rgba(255,240,223,1) 100%)!important;background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,215,169,1)), color-stop(50%,rgba(255,209,157,1)), color-stop(51%,rgba(255,200,137,1)), color-stop(100%,rgba(255,240,223,1)))!important;background: -webkit-linear-gradient(top,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;background: -o-linear-gradient(top,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;background: -ms-linear-gradient(top,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;background: linear-gradient(to bottom,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd7a9', endColorstr='#fff0df',GradientType=0 )!important}</STYLE><div id="qp_main57243" style="border-radius:6px;border:1px solid rgb(150,150,150);margin:0px;padding:10px;padding-bottom:2px;background: rgb(117,122,129);background: -moz-linear-gradient(top,  rgba(117,122,129,1) 0%, rgba(91,95,103,1) 10%, rgba(69,72,77,1) 23%, rgba(0,0,0,1) 100%);background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(117,122,129,1)), color-stop(10%,rgba(91,95,103,1)), color-stop(23%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1)));background: -webkit-linear-gradient(top,  rgba(117,122,129,1) 0%,rgba(91,95,103,1) 10%,rgba(69,72,77,1) 23%,rgba(0,0,0,1) 100%);background: -o-linear-gradient(top,  rgba(117,122,129,1) 0%,rgba(91,95,103,1) 10%,rgba(69,72,77,1) 23%,rgba(0,0,0,1) 100%);background: -ms-linear-gradient(top,  rgba(117,122,129,1) 0%,rgba(91,95,103,1) 10%,rgba(69,72,77,1) 23%,rgba(0,0,0,1) 100%);background: linear-gradient(to bottom,  rgba(117,122,129,1) 0%,rgba(91,95,103,1) 10%,rgba(69,72,77,1) 23%,rgba(0,0,0,1) 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#757a81', endColorstr='#000000',GradientType=0 );zoom:1"><div style="border-radius:6px;font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);margin-bottom:10px;background:rgb(255,255,255);background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%);background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1)));background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 );zoom:1"><div style="padding:10px">Isn't wammiltich better than tylrcarr?</div></div><form id="qp_form57243" action="http://www.poll-maker.com/results57243x823DB9Db-3" method="post" target="_blank" style="display:inline;margin:0px;padding:0px"><div style="border-radius:6px"><div style="display:block;font-family:Arial;font-size:12px;color:rgb(255,255,255);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v57243" type="radio" value="1">yes</span></div><div style="display:block;font-family:Arial;font-size:12px;color:rgb(255,255,255);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v57243" type="radio" value="2">yes</span></div></div><div style="padding-top:10px;clear:both"><a class="qp_btna" href="#"><input name="qp_b57243" style="width:80px;height:30px;margin-right:5px;border-radius:10px;border:1px solid rgb(255,255,255);font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);cursor:pointer;cursor:hand;background: rgb(226,226,226);background: -moz-linear-gradient(top,  rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%);background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(226,226,226,1)), color-stop(50%,rgba(219,219,219,1)), color-stop(51%,rgba(209,209,209,1)), color-stop(100%,rgba(254,254,254,1)));background: -webkit-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);background: -o-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);background: -ms-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);background: linear-gradient(to bottom,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 );zoom:1" type="submit" value="Vote"></a><a class="qp_btna" href="#"><input name="qp_b57243" style="width:80px;height:30px;margin-right:5px;border-radius:10px;border:1px solid rgb(255,255,255);font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);cursor:pointer;cursor:hand;background: rgb(226,226,226);background: -moz-linear-gradient(top,  rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%);background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(226,226,226,1)), color-stop(50%,rgba(219,219,219,1)), color-stop(51%,rgba(209,209,209,1)), color-stop(100%,rgba(254,254,254,1)));background: -webkit-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);background: -o-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);background: -ms-linear-gradient(top,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);background: linear-gradient(to bottom,  rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 );zoom:1" type="submit" value="Results"></a></div><a id="qp_a57243" style="float:right;font-family:Arial;font-size:10px;color:rgb(255,255,255);text-decoration:none;margin-top:-12px;margin-right:-5px" href="http://www.poll-maker.com">create a poll</a></form></div><script src="http://scripts.poll-maker.com/3012/scpolls.js" language="javascript"></script>
 
-        </article>
-      </div>
+<p>#qp_main57243 .qp_btna:hover input {background: rgb(255,215,169)!important;background: -moz-linear-gradient(top,  rgba(255,215,169,1) 0%, rgba(255,209,157,1) 50%, rgba(255,200,137,1) 51%, rgba(255,240,223,1) 100%)!important;background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,215,169,1)), color-stop(50%,rgba(255,209,157,1)), color-stop(51%,rgba(255,200,137,1)), color-stop(100%,rgba(255,240,223,1)))!important;background: -webkit-linear-gradient(top,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;background: -o-linear-gradient(top,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;background: -ms-linear-gradient(top,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;background: linear-gradient(to bottom,  rgba(255,215,169,1) 0%,rgba(255,209,157,1) 50%,rgba(255,200,137,1) 51%,rgba(255,240,223,1) 100%)!important;filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=&amp;#39;#ffd7a9&amp;#39;, endColorstr=&amp;#39;#fff0df&amp;#39;,GradientType=0 )!important}</p><div>
+<div><div>Isn't wammiltich better than tylrcarr?</div></div>
+<div>
+<div>yes</div>
+<div>yes</div>
+</div>
+<div>
+<a href="#"></a><a href="#"></a>
+</div>
+<a href="http://www.poll-maker.com">create a poll</a>
+</div>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>Projects by <a href="https://github.com/wammiltich">wammiltich</a> can be found on <a href="https://github.com/wammiltich">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
     </div>
-    <footer>
-      <div class="owner">
 
-      <p><a href="https://github.com/wammiltich" class="avatar"><img src="https://1.gravatar.com/avatar/7d3be1987216fd22deabb4339c9d2d49?d=https%3A%2F%2Fidenticons.github.com%2F2b241295dfefa54e3083020766e10791.png&amp;r=x&amp;s=60" width="48" height="48"/></a>View <a href="https://github.com/wammiltich">wammiltich</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/wammiltich/wammiltich.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/wammiltich/wammiltich.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
