--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Wammiltich.github.io by wammiltich</title>
+    <title> William's better-than-tylrcarr's site by wammiltich</title>
   </head>
 
   <body>
