--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title> William's better-than-tylrcarr's site by wammiltich</title>
+    <title> wammiltich.github.io </title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Wammiltich.github.io</h1>
+            <h1>William's better-than-tylrcarr's Site </h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
