--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </footer>
 
     </div>
-<a href="https://tylrcarr.github.io" class="button fork"><strong>Tyler's terrible site</strong></a>
+<a href="https://wammiltich.github.io/login" class="button fork"><strong>Secret</strong></a>
       </div><!-- end banner -->
     
   </body>
