--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/wammiltich">wammiltich</a> can be found on <a href="https://github.com/wammiltich">GitHub</a></p>
+            <p>Millard Filmore yo Holla</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
