--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </footer>
 
     </div>
-<a href="https://wammiltich.github.io/login" class="button fork"><strong>Secret</strong></a>
+<a href="http://www.easteregg.com/" class="button fork"><strong>W0ah u found a EastrEgg</strong></a>
       </div><!-- end banner -->
     
   </body>
