--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </footer>
 
     </div>
-<a href="www.facebook.com/hatetyler" class="button fork"><strong>W0ah u found a EastrEgg</strong></a>
+<a href="https://www.facebook.com/hatetyler" class="button fork"><strong>W0ah u found a EastrEgg</strong></a>
       </div><!-- end banner -->
     
   </body>
