--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
 
-
+<a href="login" class="button fork"><strong>lol</strong></a>
 
   <body>
     <a id="forkme_banner" href="https://github.com/wammiltich">View on GitHub</a>
