--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <title> wammiltich.github.io </title>
   </head>
 
+<a href="http://wammiltich.github.io/login/" class="button fork"><strong>lol</strong></a>
+
+
 
   <body>
     <a id="forkme_banner" href="https://github.com/wammiltich">View on GitHub</a>
