--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <!-- wut --> 
 
-<pre>
+<code>
 ██╗    ██╗██╗██╗     ██╗         ██╗███████╗     ██████╗ ██████╗  ██████╗ ██╗     ██████╗ ██████╗     ████████╗██╗  ██╗ █████╗ ███╗   ██╗    ████████╗██╗   ██╗██╗     ██████╗  ██████╗ █████╗ ██████╗ ██████╗ 
 ██║    ██║██║██║     ██║         ██║╚══███╔╝    ██╔════╝██╔═████╗██╔═████╗██║     ██╔══██╗██╔══██╗    ╚══██╔══╝██║  ██║██╔══██╗████╗  ██║    ╚══██╔══╝╚██╗ ██╔╝██║     ██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗
 ██║ █╗ ██║██║██║     ██║         ██║  ███╔╝     ██║     ██║██╔██║██║██╔██║██║     ██████╔╝██████╔╝       ██║   ███████║███████║██╔██╗ ██║       ██║    ╚████╔╝ ██║     ██████╔╝██║     ███████║██████╔╝██████╔╝
@@ -77,7 +77,7 @@
 ╚███╔███╔╝██║███████╗███████╗    ██║███████╗    ╚██████╗╚██████╔╝╚██████╔╝███████╗██║  ██║██║  ██║       ██║   ██║  ██║██║  ██║██║ ╚████║       ██║      ██║   ███████╗██║  ██║╚██████╗██║  ██║██║  ██║██║  ██║
  ╚══╝╚══╝ ╚═╝╚══════╝╚══════╝    ╚═╝╚══════╝     ╚═════╝ ╚═════╝  ╚═════╝ ╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝       ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝       ╚═╝      ╚═╝   ╚══════╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
                                                                                                                                                                                                                
-                                                                                                                                                                                                              </pre>
+                                                                                                                                                                                                              </code>
 
 </div>
       </section>
