--- a/index.html
+++ b/index.html
@@ -110,10 +110,6 @@ W::::::W                           W::::::W        l:::::l l:::::l
       </div><!-- end banner -->
     
   </body>
-</html>
-
-
-
 
 
 
@@ -126,4 +122,7 @@ __/\\\\\\___________________/\\\\\\_________________________/\\\_______/\\\\\\\\
      ____\/\\\_____/\\\__\//\\\____\/\\\_______________/\\\\\\\\\\\\\\\\_____/\\\//________\/\\\_____\/\\\_   
       ____\/\\\____\//\\\__/\\\_____\/\\\______________\///////////\\\//____/\\\/___________\//\\\____/\\\__  
        __/\\\\\\\\\__\///\\\\\/____/\\\\\\\\\_____________________\/\\\_____/\\\\\\\\\\\\\\\__\///\\\\\\\/___ 
-        _\/////////_____\/////_____\/////////______________________\///_____\///////////////_____\///////_____</pre>
+        _\/////////_____\/////_____\/////////______________________\///_____\///////////////_____\///////_____
+</pre>
+
+</html>
