--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title> wammiltich.github.io </title>
+    <title> Hough Orquesta </title>
   </head>
 
-
-
-
-  <body>
-    <a id="forkme_banner" href="https://github.com/wammiltich">View on GitHub</a>
-    <div class="shell">
 
       <header>
         <span class="ribbon-outer">
@@ -59,48 +53,6 @@
 
 <a href="http://wammiltich.github.io/login/" class="button fork"><strong>lol</strong></a>
 
-
-
-<iframe width="500" height="281" src="//www.youtube.com/embed/o4PFDKIc2fs" frameborder="0" allowfullscreen></iframe>
-
-
-
-<iframe width="500" height="281" src="//www.youtube.com/embed/aD3RNs4QFMc?rel=0" frameborder="0" allowfullscreen></iframe>
-
-<!-- wut --> 
-
-<pre>                                                                                                                     
-                                                                                                                     
-WWWWWWWW                           WWWWWWWW  iiii  lllllll lllllll   iiii                                            
-W::::::W                           W::::::W i::::i l:::::l l:::::l  i::::i                                           
-W::::::W                           W::::::W  iiii  l:::::l l:::::l   iiii                                            
-W::::::W                           W::::::W        l:::::l l:::::l                                                   
- W:::::W           WWWWW           W:::::W iiiiiii  l::::l  l::::l iiiiiii   aaaaaaaaaaaaa      mmmmmmm    mmmmmmm   
-  W:::::W         W:::::W         W:::::W  i:::::i  l::::l  l::::l i:::::i   a::::::::::::a   mm:::::::m  m:::::::mm 
-   W:::::W       W:::::::W       W:::::W    i::::i  l::::l  l::::l  i::::i   aaaaaaaaa:::::a m::::::::::mm::::::::::m
-    W:::::W     W:::::::::W     W:::::W     i::::i  l::::l  l::::l  i::::i            a::::a m::::::::::::::::::::::m
-     W:::::W   W:::::W:::::W   W:::::W      i::::i  l::::l  l::::l  i::::i     aaaaaaa:::::a m:::::mmm::::::mmm:::::m
-      W:::::W W:::::W W:::::W W:::::W       i::::i  l::::l  l::::l  i::::i   aa::::::::::::a m::::m   m::::m   m::::m
-       W:::::W:::::W   W:::::W:::::W        i::::i  l::::l  l::::l  i::::i  a::::aaaa::::::a m::::m   m::::m   m::::m
-        W:::::::::W     W:::::::::W         i::::i  l::::l  l::::l  i::::i a::::a    a:::::a m::::m   m::::m   m::::m
-         W:::::::W       W:::::::W         i::::::il::::::ll::::::li::::::ia::::a    a:::::a m::::m   m::::m   m::::m
-          W:::::W         W:::::W          i::::::il::::::ll::::::li::::::ia:::::aaaa::::::a m::::m   m::::m   m::::m
-           W:::W           W:::W           i::::::il::::::ll::::::li::::::i a::::::::::aa:::am::::m   m::::m   m::::m
-            WWW             WWW            iiiiiiiilllllllllllllllliiiiiiii  aaaaaaaaaa  aaaammmmmm   mmmmmm   mmmmmm
-</pre>
-
-<pre>
-__/\\\\\\___________________/\\\\\\_________________________/\\\_______/\\\\\\\\\_________/\\\\\\\____        
- _\////\\\__________________\////\\\_______________________/\\\\\_____/\\\///////\\\_____/\\\/////\\\__       
-  ____\/\\\_____________________\/\\\_____________________/\\\/\\\____\///______\//\\\___/\\\____\//\\\_      
-   ____\/\\\________/\\\\\_______\/\\\___________________/\\\/\/\\\______________/\\\/___\/\\\_____\/\\\_     
-    ____\/\\\______/\\\///\\\_____\/\\\_________________/\\\/__\/\\\___________/\\\//_____\/\\\_____\/\\\_    
-     ____\/\\\_____/\\\__\//\\\____\/\\\_______________/\\\\\\\\\\\\\\\\_____/\\\//________\/\\\_____\/\\\_   
-      ____\/\\\____\//\\\__/\\\_____\/\\\______________\///////////\\\//____/\\\/___________\//\\\____/\\\__  
-       __/\\\\\\\\\__\///\\\\\/____/\\\\\\\\\_____________________\/\\\_____/\\\\\\\\\\\\\\\__\///\\\\\\\/___ 
-        _\/////////_____\/////_____\/////////______________________\///_____\///////////////_____\///////_____
-</pre>
-
 </div>
       </section>
 
@@ -117,23 +69,7 @@ __/\\\\\\___________________/\\\\\\_________________________/\\\_______/\\\\\\\\
       </footer>
 
     </div>
-<a href="https://www.facebook.com/hatetyler" class="button fork"><strong>W0ah u found a EastrEgg</strong></a>
-      </div><!-- end banner -->
-    
+
   </body>
-
-
-
-<pre>
-__/\\\\\\___________________/\\\\\\_________________________/\\\_______/\\\\\\\\\_________/\\\\\\\____        
- _\////\\\__________________\////\\\_______________________/\\\\\_____/\\\///////\\\_____/\\\/////\\\__       
-  ____\/\\\_____________________\/\\\_____________________/\\\/\\\____\///______\//\\\___/\\\____\//\\\_      
-   ____\/\\\________/\\\\\_______\/\\\___________________/\\\/\/\\\______________/\\\/___\/\\\_____\/\\\_     
-    ____\/\\\______/\\\///\\\_____\/\\\_________________/\\\/__\/\\\___________/\\\//_____\/\\\_____\/\\\_    
-     ____\/\\\_____/\\\__\//\\\____\/\\\_______________/\\\\\\\\\\\\\\\\_____/\\\//________\/\\\_____\/\\\_   
-      ____\/\\\____\//\\\__/\\\_____\/\\\______________\///////////\\\//____/\\\/___________\//\\\____/\\\__  
-       __/\\\\\\\\\__\///\\\\\/____/\\\\\\\\\_____________________\/\\\_____/\\\\\\\\\\\\\\\__\///\\\\\\\/___ 
-        _\/////////_____\/////_____\/////////______________________\///_____\///////////////_____\///////_____
-</pre>
 
 </html>
